gcc/testsuite/rust/rustc/ui/error-codes/E0004.rs
enum Terminator {
    HastaLaVistaBaby,
    TalkToMyHand,
}

fn main() {
    let x = Terminator::HastaLaVistaBaby;

    match x { // { dg-error ".E0004." "" { target *-*-* } }
        Terminator::TalkToMyHand => {}
    }
}

